2001-06-23  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-header.c (g_mime_header_remove): New function.
	(g_mime_header_set): Setting header to NULL no longer removes the
	header. Use g_mime_header_remove instead.

	* gmime-message.c (g_mime_message_write_to_string): No longer have
	to sync the headers.
	(g_mime_message_get_headers): Same.
	(g_mime_message_set_sender): sync the From header.
	(g_mime_message_set_reply_to): Sync the Reply-To header.
	(g_mime_message_add_recipient): Sync the recipient header.
	(g_mime_message_add_recipients_from_string): Same.
	(g_mime_message_set_subject): Sync the Subject header.
	(g_mime_message_set_date): Sync the date header.
	(g_mime_message_set_message_id): Sync the Message-Id header.

2001-06-03  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (quoted_encode): Minor cleanup.

2001-06-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-message.c (sync_headers): Oops. Don't place "Cc:" in the
	header value string :-)

2001-03-31  Charles Kerr <charles@rebelbase.com>

	* gmime-utils.c (g_mime_utils_8bit_header_decode): big speedups.

	* gmime-utils.c (g_mime_utils_8bit_header_encode): small speedups.

2001-05-29  Jeffrey Stedfast  <fejj@ximian.com>

	* internet-address.c (decode_mailbox): Oops, test to make sure we
	won't be running past the end of the buffer when considering a
	retry. Thanks to Charles Kerr for this fix.

2001-03-29  Charles Kerr <charles@rebelbase.com>

	* gmime-part.c (g_mime_part_append_pre_encoded_content): fix small
	bug that crept into the last commit.

2001-05-29  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes on behalf of Charles Kerr of Pan fame:
	
	* gmime-parser.c (g_mime_parser_construct_part_from_file):
	Use g_mime_part_append_pre_encoded_content().

	* gmime-part.c (g_mime_part_append_pre_encoded_content): New
	function so that the FILE parser doesn't need to manage it's own
	content array.

	* gmime-header.[c,h]: const'ify.
	(g_mime_header_foreach): New function to call a chosen function